backend security issues fixed with optimization